--- a/Python Datastructures.ipynb
+++ b/Python Datastructures.ipynb
@@ -773,6 +773,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "[101, 102, 103, 105, [201, 202, 203, 204, [304, 305, 305, 'python', ['groovy'], [20, 21], [31, 32], [41, 42]]]]\n",
+      "105\n",
+      "[201, 202, 203, 204, [304, 305, 305, 'python', ['groovy'], [20, 21], [31, 32], [41, 42]]]\n",
+      "204\n",
+      "203\n",
+      "42\n",
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,[101,102,103,105,[201,202,203,204,[304,305,305,\"python\",[\"groovy\"],[20,21],[31,32],[41,42]]]]]\n",
+    "\n",
+    "print(a[4])\n",
+    "print(a[5])\n",
+    "print(a[5][3])\n",
+    "print(a[5][4])\n",
+    "print(a[5][4][3])\n",
+    "print(a[5][4][2])\n",
+    "\n",
+    "#42\n",
+    "\n",
+    "print(a[5][4][4][7][1])\n",
+    "print(a[-1][-1][-1][-1][-1])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1100,6 +1136,458 @@
     "\n",
     "#https://www.w3schools.com/python/python_ref_set.asp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7}\n",
+      "<class 'set'>\n",
+      "{1, 2, 3, 4, 5, 6, 7, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#add #adding one element to set (no position or index value)\n",
+    "\n",
+    "a = {2,3,4,5,6,7,1,2,3}\n",
+    "\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "a.add(10)\n",
+    "a.add(5)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 5, 6}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "10",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-66c8844c8eea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 10"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6}\n",
+    "\n",
+    "a.remove(4)\n",
+    "print(a)\n",
+    "a.remove(10)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 5, 6}\n",
+      "{3, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6}\n",
+    "\n",
+    "a.discard(4)\n",
+    "print(a)\n",
+    "a.discard(10)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5, 6}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "pop() takes no arguments (1 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-06dcbb981547>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: pop() takes no arguments (1 given)"
+     ]
+    }
+   ],
+   "source": [
+    "#pop #remove random element from set\n",
+    "\n",
+    "\n",
+    "b = {3,4,5,6}\n",
+    "\n",
+    "b.pop()\n",
+    "print(b)\n",
+    "\n",
+    "b.pop(4)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clear\n",
+    "\n",
+    "a = {3,4,5,2,1}\n",
+    "a.clear()\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [3,4,5,2,1]\n",
+    "a.clear()\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 5, 6, 10}\n",
+      "{3, 4, 5, 6, 10}\n",
+      "{3, 4, 5, 6, 100, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#copy\n",
+    "\n",
+    "a = {3,4,5,6,10}\n",
+    "\n",
+    "b = a.copy()\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "b.add(100)\n",
+    "\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#update\n",
+    "\n",
+    "a = {3,4,5,2,1,0}\n",
+    "b = {6,7,8,3,2,1}\n",
+    "\n",
+    "a.update(b)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'set' and 'set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-7b02042e6e11>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m}\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'set' and 'set'"
+     ]
+    }
+   ],
+   "source": [
+    "print([1,2,3,4] + [5,6,7,8])\n",
+    "print({2,3,4,5} + {6,7,5,4})\n",
+    "\n",
+    "#Linked list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#union\n",
+    "#intersection\n",
+    "#difference\n",
+    "#subset\n",
+    "#symmetric difference\n",
+    "#super set\n",
+    "#Disjoint\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 5, 6, 10, 11, 12, 13, 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6,10}\n",
+    "b = {4,10,11,12,13,15,5}\n",
+    "\n",
+    "c = a.union(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6,10}\n",
+    "b = {4,10,11,12,13,15,5}\n",
+    "\n",
+    "c = a.intersection(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6,10}\n",
+    "b = {4,10,11,12,13,15,5}\n",
+    "\n",
+    "a.intersection_update(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6,10}\n",
+    "b = {4,10,11,12,13,15,5}\n",
+    "\n",
+    "c = a.difference(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6,10}\n",
+    "b = {4,10,11,12,13,15,5}\n",
+    "\n",
+    "a.difference_update(b)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{11, 12, 13, 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6,10}\n",
+    "b = {4,10,11,12,13,15,5}\n",
+    "\n",
+    "c = b.difference(a)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 6, 11, 12, 13, 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#symmetric difference (Union) - (Intersection)\n",
+    "\n",
+    "a = {3,4,5,6,10}\n",
+    "b = {4,10,11,12,13,15,5}\n",
+    "\n",
+    "c = a.symmetric_difference(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 6, 11, 12, 13, 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {3,4,5,6,10}\n",
+    "b = {4,10,11,12,13,15,5}\n",
+    "\n",
+    "a.symmetric_difference_update(b)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
