--- a/Python Datastructures.ipynb
+++ b/Python Datastructures.ipynb
@@ -58,10 +58,14 @@
     "{}\n",
     "No indexing\n",
     "No indexing or ordering\n",
+    "Mutable\n",
+    "+ operator not supports (concatenatiomn)\n",
     "\n",
     "#Dictionary\n",
     "{:}\n",
-    "No indexing or ordering"
+    "No indexing or ordering\n",
+    "Mutable\n",
+    "+ operator not supports (concatenatiomn)"
    ]
   },
   {
@@ -1581,6 +1585,474 @@
     "\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionary Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "<class 'dict'>\n",
+      "{}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#empty dictionary\n",
+    "\n",
+    "dict1 = {}\n",
+    "\n",
+    "print(dict1)\n",
+    "print(type(dict1))\n",
+    "\n",
+    "dict2 = dict()\n",
+    "\n",
+    "print(dict2)\n",
+    "print(type(dict2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{True, 2, 3, 4, 'groovy', 'go', 'python'}\n",
+      "<class 'set'>\n",
+      "{1: 1, 2: 'python', 3: 'go', 4: 5.5, 10: False, -2: True}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#{}\n",
+    "\n",
+    "\n",
+    "dict1 = {2,3,4,\"python\", \"groovy\", \"go\", True}\n",
+    "\n",
+    "print(dict1)\n",
+    "print(type(dict1))\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "print(dict2)\n",
+    "print(type(dict2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'grrovy', 2: 'python', 3: 'go', 4: 'python', 10: False, -2: True}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Key should be unique, value can be anything\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True, 1:\"grrovy\", 4:\"python\"}\n",
+    "print(dict2)\n",
+    "print(type(dict2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 'python', 3: 'go', 4: 5.5, 10: False, -2: True}\n",
+      "<class 'dict'>\n",
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "#indexing ==> No indexing or ordering\n",
+    "\n",
+    "#Index ===> key\n",
+    "\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "print(dict2)\n",
+    "print(type(dict2))\n",
+    "print(dict2[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'dict' and 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-238b8a884e07>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdict3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"python\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"go\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m5.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m11\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdict2\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mdict3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'dict' and 'dict'"
+     ]
+    }
+   ],
+   "source": [
+    "#Concatenation\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "\n",
+    "dict3 = {1: 1, 2:\"python\", 30:\"go\", 4:5.5, 11:False, -2:True}\n",
+    "\n",
+    "print(dict2 + dict3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#accessing values\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "\n",
+    "print(dict2[10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 'welcome', 3: 'go', 4: 5.5, 10: False, -2: True, 11: 'december'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#replacement or overwrite or value addition\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "\n",
+    "dict2[2] = \"welcome\" #replacement\n",
+    "\n",
+    "dict2[11] = \"december\" #addition\n",
+    "print(dict2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "\n",
+    "print(dict2[10])\n",
+    "print(dict2.get(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 'python', 3: 'go', 4: 5.5, 10: False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pop ==> removing one key value\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "\n",
+    "dict2.pop(-2)\n",
+    "\n",
+    "print(dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 'python', 3: 'go', 4: 5.5, 10: False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pop item  # removing random element from dictionary\n",
+    "\n",
+    "\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "\n",
+    "dict2.popitem()\n",
+    "\n",
+    "print(dict2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 'python', 3: 'go', 4: 5.5, 10: False, -2: True, 9: 1, 8: 'python', 13: 'go', 14: 5.5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "\n",
+    "dict3 = {9: 1, 8:\"python\", 13:\"go\", 14:5.5, 10:False, -2:True}\n",
+    "\n",
+    "dict2.update(dict3)\n",
+    "print(dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys([1, 2, 3, 4, 10, -2])\n",
+      "dict_values([1, 'python', 'go', 5.5, False, True])\n",
+      "dict_items([(1, 1), (2, 'python'), (3, 'go'), (4, 5.5), (10, False), (-2, True)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#accessing elements\n",
+    "\n",
+    "#Loops\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:False, -2:True}\n",
+    "\n",
+    "\n",
+    "print(dict2.keys())\n",
+    "print(dict2.values())\n",
+    "print(dict2.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, {1, 2, 3, 4}, (3, 4, 2)]\n",
+      "<class 'list'>\n",
+      "{1: 1, 2: 'python', 3: 'go', 4: 5.5, 'cal': [1, 2, 3, 4, 5, {1, 2, 3, 4}, (3, 4, 2)], -2: True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, \"cal\":[1,2,3,4,5,{1,2,3,4},(3,4,2)], -2:True}\n",
+    "\n",
+    "print(dict2[\"cal\"])\n",
+    "\n",
+    "print(type(dict2[\"cal\"]))\n",
+    "print(dict2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clear\n",
+    "\n",
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, 10:[1,2,3,4,5,10], -2:True}\n",
+    "\n",
+    "dict2.clear()\n",
+    "print(dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#copy\n",
+    "\n",
+    "dict3 = dict2.copy()\n",
+    "print(dict3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nested Data structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 'python', 3: 'go', 4: 5.5, 'cal': [1, 2, 3, 4, 5, {1, 2, 3, 4}, (3, 4, 2)], -2: True}\n",
+      "python\n",
+      "on\n",
+      "True\n",
+      "{1, 2, 3, 4}\n",
+      "(3, 4, 2)\n",
+      "(3, 4, 2)\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2 = {1: 1, 2:\"python\", 3:\"go\", 4:5.5, \"cal\":[1,2,3,4,5,{1,2,3,4},(3,4,2)], -2:True}\n",
+    "\n",
+    "print(dict2)\n",
+    "\n",
+    "#python\n",
+    "\n",
+    "print(dict2[2])\n",
+    "#on\n",
+    "\n",
+    "print(dict2[2][-2:])\n",
+    "#True\n",
+    "\n",
+    "print(dict2[-2])\n",
+    "#{1,2,3,4}\n",
+    "\n",
+    "print(dict2[\"cal\"][5])\n",
+    "#(3,4,2)\n",
+    "print(dict2[\"cal\"][6])\n",
+    "\n",
+    "print(dict2[\"cal\"][-1])\n",
+    "\n",
+    "\n",
+    "\n",
+    "#3 in tuple\n",
+    "\n",
+    "print(dict2[\"cal\"][6][0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
