--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -913,12 +913,178 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiples of 3 are  [3, 6, 3, 6, 9, 12]\n",
+      "Multiples of 5 are  [5, 10, 20, 40, 70]\n",
+      "Multiples of 3 and 5 are  [15, 45, 30]\n",
+      "No of remaining elements  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Loops program\n",
+    "\n",
+    "\n",
+    "a = [3,4,5,6,15,45,3,2,6,9,7,8,12,10,20,30,40,70]\n",
+    "\n",
+    "#multiple of 3 list fizz\n",
+    "##multiple of 5 list buzz\n",
+    "#multiple of 15 list fizzbuzz\n",
+    "#Others no action required but you need print number of elements\n",
+    "\n",
+    "#Multiples of 3 are [3,6,9,12]\n",
+    "#Multiple of 5 are [10,20,40,70]\n",
+    "#Multiples of 15 are [15,45,30]\n",
+    "#No of remaining elements 7\n",
+    "\n",
+    "\n",
+    "a = [3,4,5,6,15,45,3,2,6,9,7,8,12,10,20,30,40,70]\n",
+    "\n",
+    "mul_3 = []\n",
+    "mul_5 = []\n",
+    "mul_35 = []\n",
+    "count = 0\n",
+    "\n",
+    "\n",
+    "for ele in a:\n",
+    "    if ele % 3  == 0 and ele % 5 == 0: #ele % 15\n",
+    "        mul_35.append(ele)\n",
+    "    elif ele % 5 == 0:\n",
+    "        mul_5.append(ele)\n",
+    "    elif ele % 3  == 0:\n",
+    "        mul_3.append(ele)\n",
+    "    else:\n",
+    "        count = count + 1\n",
+    "\n",
+    "\n",
+    "print(\"Multiples of 3 are \", mul_3)\n",
+    "print(\"Multiples of 5 are \", mul_5)\n",
+    "print(\"Multiples of 3 and 5 are \", mul_35)\n",
+    "print(\"No of remaining elements \",count)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter number of elements: 5\n",
+      "please enter input number 1 45\n",
+      "please enter input number 2 54\n",
+      "please enter input number 3 67\n",
+      "please enter input number 4 89\n",
+      "please enter input number 5 30\n",
+      "['45', '54', '67', '89', '30']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List collection from user\n",
+    "\n",
+    "#Number of elements\n",
+    "#append in to list\n",
+    "\n",
+    "Li = []\n",
+    "\n",
+    "val = int(input(\"Please enter number of elements: \"))\n",
+    "\n",
+    "for i in range(val):\n",
+    "    actual_list_elements = input(\"please enter input number \"+str(i+1)+\" :\")\n",
+    "    Li.append(actual_list_elements)\n",
+    "print(Li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter number of elements: 5\n",
+      "please enter the key 1 :1\n",
+      "please enter the value 1 :ppp\n",
+      "please enter the key 2 :2\n",
+      "please enter the value 2 :ddd\n",
+      "please enter the key 3 :3\n",
+      "please enter the value 3 :hhhh\n",
+      "please enter the key 4 :4\n",
+      "please enter the value 4 :yyyy\n",
+      "please enter the key 5 :5\n",
+      "please enter the value 5 :hhhh\n",
+      "{1: 'ppp', 2: 'ddd', 3: 'hhhh', 4: 'yyyy', 5: 'hhhh'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List collection from user\n",
+    "\n",
+    "#Number of elements\n",
+    "#append in to list\n",
+    "\n",
+    "Li = {}\n",
+    "\n",
+    "val = int(input(\"Please enter number of elements: \"))\n",
+    "\n",
+    "for i in range(val):\n",
+    "    key = int(input(\"please enter the key \"+str(i+1)+\" :\"))\n",
+    "    value = input(\"please enter the value \"+str(i+1)+\" :\")\n",
+    "    Li[key] = value\n",
+    "\n",
+    "print(Li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "armstrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "#armstrong number check\n",
+    "\n",
+    "#153 ==> 1 ^ 3 + 5 ^3 + 3 ^3\n",
+    "\n",
+    "a = 370\n",
+    "sum = 0\n",
+    "\n",
+    "for i in str(a):\n",
+    "    sum = sum + int(i) ** 3\n",
+    "    \n",
+    "if sum == a:\n",
+    "    print(\"armstrong\")\n",
+    "else:\n",
+    "    print(\"Nt armstrong\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#while else\n",
-    "\n"
+    "#prime number check"
    ]
   }
  ],
