--- a/Exception handling.ipynb
+++ b/Exception handling.ipynb
@@ -204,10 +204,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An exception in module 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#try except else finally\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    a = 10\n",
+    "    b = 20\n",
+    "    c = a + b + x\n",
+    "    print(c)\n",
+    "    print(\"hello\")\n",
+    "except:\n",
+    "    print(\"An exception in module 1\")\n",
+    "    \n",
+    "#try - except mandatory "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An exception in module 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Handling specific error\n",
+    "\n",
+    "try:\n",
+    "    a = 10\n",
+    "    b = 20\n",
+    "    c = a + b + x\n",
+    "    print(c)\n",
+    "    print(\"hello\")\n",
+    "except (NameError, TypeError):\n",
+    "    print(\"An exception in module 1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-315115495856>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m+\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"hello\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 20\n",
+    "c = a + b +x\n",
+    "print(c)\n",
+    "print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'x' is not defined\n",
+      "<class 'NameError'>\n",
+      "An exception in module 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a = 10\n",
+    "    b = 20\n",
+    "    c = a + b + x\n",
+    "    print(c)\n",
+    "    print(\"hello\")\n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "    print(type(ex))\n",
+    "    print(\"An exception in module 1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exception block\n"
+     ]
+    }
+   ],
+   "source": [
+    "#else finally  ===> multiple except block\n",
+    "\n",
+    "try:\n",
+    "    a = 10\n",
+    "    b = \"20\"\n",
+    "    c = a + b\n",
+    "    print(c)\n",
+    "    print(\"hello\")\n",
+    "except NameError:\n",
+    "    print(ex)\n",
+    "    print(type(ex))\n",
+    "    print(\"An exception in module 1\")    \n",
+    "except:\n",
+    "    print(\"exception block\")\n",
+    "\n",
+    "    \n",
+    "'''\n",
+    "else:\n",
+    "    print(\"No exception in the code\")\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compulsory code after all blocks (both with and without exception)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-249aed65d610>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"20\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"hello\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "#with exception\n",
+    "try:\n",
+    "    a = 10\n",
+    "    b = \"20\"\n",
+    "    c = a + b\n",
+    "    print(c)\n",
+    "    print(\"hello\")\n",
+    "except:\n",
+    "    print(\"exception\")\n",
+    "else:\n",
+    "    print(\"No exception in the code\")\n",
+    "finally:\n",
+    "    print(\"Compulsory code after all blocks (both with and without exception)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "hello\n",
+      "No exception in the code\n",
+      "Compulsory code after all blocks (both with and without exception)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#with out exception\n",
+    "try:\n",
+    "    a = 10\n",
+    "    b = 20\n",
+    "    c = a + b\n",
+    "    print(c)\n",
+    "    print(\"hello\")\n",
+    "except:\n",
+    "    print(\"exception\")\n",
+    "else:\n",
+    "    print(\"No exception in the code\")\n",
+    "finally:\n",
+    "    print(\"Compulsory code after all blocks (both with and without exception)\")"
+   ]
   }
  ],
  "metadata": {
